# control-flow

./: .gitmodules  CLAUDE.md  CLAUDE_CACHING_OPTIMIZATION.md  Cargo.toml  IMPLEMENTATION-PLAN.md  PROJECT_SUMMARY.md  QUESTION_ANSWER_CATEGORIZATION.md  README-TUI.md  README.md  TICKET-ENGINE-STATUS.md  UI-TESTING-FRAMEWORK.md  character.md  index.html  init_cogmach.sh  package-lock.json  package.json  playwright.config.js  ticket-server.cjs  vite.config.js
bindings/: Choice.ts  ChoiceMetadata.ts  CoherenceIssue.ts  CoherenceIssueType.ts  CoherenceReport.ts  EdgeMetadata.ts  ExperienceLevel.ts  ImportanceLevel.ts  IssueSeverity.ts  NodeMetadata.ts  NodeState.ts  NodeType.ts  ProjectConstraints.ts  Question.ts  QuestionContext.ts  QuestionOption.ts  QuestionType.ts  RiskLevel.ts  SessionMetadata.ts  StoryAnalytics.ts  StoryContext.ts  StoryEdge.ts  StoryGraph.ts  StoryMetadata.ts  StoryNode.ts  TechnicalDetail.ts  UncertaintyContext.ts  UserResponse.ts  ValidationRules.ts  ValidationStatus.ts  index.ts
client-implementations/: Cargo.toml  README.md
client-implementations/examples/: deepseek_demo.rs  flexible_client_demo.rs  rich_schema_demo.rs  schema_demo.rs
client-implementations/src/: benchmark.rs  claude.rs  client.rs  deepseek.rs  error.rs  lib.rs  test_utils.rs
client-implementations/tests/: benchmark_tests.rs  integration_tests.rs
cogmach/: CLAUDE.md  README.md
cogmach/examples/: schema_example.rs
cogmach/src/: cogmach.rs  error.rs  lib.rs
cogmach/tests/: integration_test.rs
cognize/: Cargo.toml
cognize/src/: main.rs
control-flow-projects/: projects.json  t2.json  test_project.json  todo_app.json  tui_test.json
ffww/: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  tasks.json  test_todo_app.py  todo_app.py
ffww/examples/: todoapp-framework.rs
ffww/examples/dynamic-schema-generation/: main.rs
ffww/src/: error.rs
graph-server/: Cargo.toml  SYSTEM_ARCHITECTURE.md  graph_data.json  test_edge_connections.html  test_integration.sh  test_persistence.sh  test_server.sh  test_simulation.js
graph-server/src/: main.rs
graph-server/static/: graph-renderer.ts  index-broken.html  index.html  test-basic.html
record-keeping/: .gitignore  README.md  deps.edn  example_usage.clj  system_specification.md
record-keeping/resources/: config.edn
record-keeping/src/: core.clj  datomic_adapter.clj  extraction_prompt.clj  llm_extractor.clj  queries.clj  schema.clj
sats-core/: Cargo.toml
sats-core/src/: alignment.rs  analysis.rs  claude_impl.rs  lib.rs  storage.rs  types.rs
sats-example/: .env.example  .gitignore  Cargo.toml  README-claude.md  README.md  SETUP.md  claude_analysis_results_20250605_082432.json  claude_analysis_results_20250605_170914.json  claude_analysis_results_20250605_172028.json  claude_analysis_results_20250605_172215.json  claude_analysis_results_20250605_172952.json
sats-example/src/: main.rs
sats-v2/: .env.example  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md
sats-v2/examples/: basic_usage.rs  code_reference_workflow.rs  full_workflow.rs  verification_extraction_workflow.rs
sats-v2/src/: ai_agents.rs  code_references.rs  execution.rs  generators.rs  lib.rs  semantic.rs  types.rs  verification.rs  verification_claim_extractor.rs  work_items.rs  workflow.rs  workflow_impl.rs
sats-v2/templates/: rust_function.template  rust_test.template
src/: App.vue  engine.rs  errors.rs  lib.rs  llm_engine.rs  mock_engine.rs  qa_engine.rs  refinement_service.rs  ticket.rs  ticket_service.rs  types.rs
src/components/: AdventureGame.vue  AdventureGameV2.vue  ApiKeyStatus.vue  DependencyGraph.vue  GraphPlayground.vue  LayoutComparison.vue  StoryBuilder.vue  TicketCard.vue  TicketCreator.vue
src/components/__tests__/: AdventureGame.state.test.js  AdventureGame.test.js  AdventureGame.ui.test.js
src/config/: env.js
src/engine/: GameEngine.js  README.md
src/engine/__tests__/: GameEngine.test.js
src/router/: index.js
src/services/: aiService.js  claudeApi.js
src/services/__tests__/: claudeApi.test.js
src/stores/: ticketStore.js
src/test/: setup.js
src/test/frameworks/: UIStateTester.js
src/test/integration/: realGraphValidation.test.js  storyGraph.test.js
src/test/reports/: ui-testing-framework-summary.md
src/test/utils/: testHelpers.js
src/tests/: validate-test-framework.test.js
src/tests/e2e/: adventure-game-ui.spec.js  comprehensive-ui-testing.spec.js  game-advancement.spec.js  story-advancement-bugs.spec.js  test-helpers.js
src/types/: planning.ts
src/types/__tests__/: planning.test.js
src/utils/: decomposer_start.ts  ticket-reader.cjs
src/views/: Home.vue  Interactivity.vue  TicketManagement.vue
stories/: planning_journey_build_a_high_order_planning_syste-20250603_212806.json
tests/: cli_functionality_test.rs  debug_tui_items.rs  full_tui_simulation.rs  integration_test.rs  test_fresh_project.rs  tui_debug_test.rs  tui_fix_test.rs  tui_test.rs
tickets/: build_a_todo_app_with_real_time_sync_2025-05-29T19-36-23-521Z.json  create_an_enterprise_grade_e_commerce_platform_with_inventory_management__payment_processing__and_analytics_dashboard_2025-05-29T19-36-46-622Z.json
