[package]
name = "story-generation-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
ts-rs = { version = "7.1", features = ["uuid-impl", "chrono-impl"] }
async-trait = "0.1"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8"
dotenvy = "0.15"
glob = "0.3"

[lib]
name = "story_generation_engine"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "generate-types"
path = "src/bin/generate_types.rs"

[[bin]]
name = "adventure-game"
path = "src/bin/adventure_game.rs"

[[bin]]
name = "interactive-planner"
path = "src/bin/interactive_planner.rs"

[[bin]]
name = "qa-planner"
path = "src/bin/qa_planner.rs"

[package.metadata.ts-rs]
output-dir = "./typescript-types/"