[package]
name = "ffww"
version = "0.1.0"
edition = "2021"


[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Tracing and logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# HTTP client for AI APIs
reqwest = { version = "0.11", features = ["json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# CLI utilities
clap = { version = "4.0", features = ["derive"] }

# Testing
regex = "1.0"

# Client implementations
client-implementations = { path = "../client-implementations" }

# Schema generation
schemars = "0.8"

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = "0.3"
