[package]
name = "sats-core"
version = "0.1.0"
edition = "2021"
description = "Semantic Alignment Tracking System - Core types and interfaces"
license = "MIT"
authors = ["SATS Contributors"]
repository = "https://github.com/your-org/control-flow"

[dependencies]
# Client implementations
client-implementations = { path = "../client-implementations" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async support
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }

# Error handling
thiserror = "1.0"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Logging
tracing = "0.1"

[dev-dependencies]
# Testing utilities
tokio-test = "0.4"

[features]
default = []
# Feature flag for enabling caching support
caching = []
# Feature flag for enabling external source integrations
external-sources = []