[package]
name = "sats-example"
version = "0.1.0"
edition = "2021"

[dependencies]
sats-core = { path = "../sats-core" }
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
dotenv = "0.15"
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }