[package]
name = "sats-v2"
version = "0.1.0"
edition = "2021"
description = "Semantic Alignment Tracking System v2 - Implementation gap discovery and work generation"
authors = ["SATS Team <team@sats.dev>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/sats-project/sats-v2"
readme = "README.md"
keywords = ["semantic", "alignment", "verification", "testing", "code-analysis"]
categories = ["development-tools", "software-analysis"]

[dependencies]
uuid = { version = "1.6", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1.10"
clap = { version = "4.4", features = ["derive"] }

# For execution engine
tempfile = "3.8"
subprocess = "0.2"

# For LLM integration using client-implementations
reqwest = { version = "0.11", features = ["json"] }
client-implementations = { path = "../client-implementations" }

# SATS core for analysis interfaces
sats-core = { path = "../sats-core" }

# For semantic analysis
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-python = "0.20"
tree-sitter-javascript = "0.20"

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.4"
insta = "1.34"
criterion = "0.5"


[features]
default = ["local-execution"]
local-execution = []
remote-execution = []
advanced-analysis = []